# CubeWorld-XML-Language-Fix

./: CMakeLists.txt  CubeWorldXMLLanguageFix.cpp  CubeWorldXMLLanguageFix.h  README.md  cwsdk.h
Hooks/: __OnLanguageWStringCopy.h
cwsdk/: CMakeLists.txt  cube.h  memory_management.h
cwsdk/cube/: Creature.h  GameController.h  OptionsWidget.h  Region.h
cwsdk/plasma/: Object.h  Widget.h
